--- a/docs/css/layout.css
+++ b/docs/css/layout.css
@@ -142,7 +142,7 @@ address {
 }
 
 .shadow {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    box-shadow: rgb(137 137 137 / 25%) 0px 2px 5px -1px, rgb(126 126 126 / 70%) 0px 1px 3px -1px;
 }
 
 .shadow-s {
